# Project

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
.claude/: DESIGN.md  GOALS.md  HANDOFF.md  PROGRESS.md
.github/actions/setup-qemu-contest/: action.yml
.github/workflows/: ci.yml  fulltest.yml  mirror.yml
cargo/: config.toml
ci/: README.md  build-lamusl.sh  ltp-cases.txt  make-testimg.sh  parse-ltp.sh  prep-fulldisk.sh  run-fulltest.sh  run-qemu.sh  split-sdcard.sh  summary.py
docs/: shm-iozone-investigation.md
kernel/: Cargo.toml  build.rs  linker-la.ld  linker.ld
kernel/.cargo/: config.toml
kernel/cargo/: config.toml
kernel/src/: console.rs  contest_runner.rs  ksyms.rs  main.rs  signal.rs  vdso.rs
kernel/src/arch/: mod.rs
kernel/src/arch/loongarch64/: boot.S  console.rs  context.rs  fpu.rs  mm.rs  mod.rs  power.rs  time.rs  trap.S  trap.rs
kernel/src/arch/riscv64/: boot.S  console.rs  context.rs  mm.rs  mod.rs  power.rs  time.rs  trap.S  trap.rs
kernel/src/drivers/: mod.rs  pci.rs  virtio_blk.rs  virtio_net.rs
kernel/src/fs/: devfs.rs  ext2.rs  ext4.rs  fat32.rs  loopdev.rs  mod.rs  notify.rs  pipe.rs  procfs.rs  socket.rs  tmpfs.rs
kernel/src/loader/: mod.rs
kernel/src/mm/: address.rs  frame.rs  heap.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/net/: loopback.rs  mod.rs
kernel/src/sync/: futex.rs  mod.rs  spinlock.rs
kernel/src/syscall/: keys.rs  mod.rs  nr.rs  socket.rs  sysv_ipc.rs
kernel/src/task/: mod.rs
kernel/src/vdso/: build.sh  rt_sigreturn.S  vdso.lds
scripts/: build_la_stub.sh  gen_ksyms.py  la_stub.S  mini-disk.sh  run-mini.sh
user/: Cargo.toml  busybox.elf  chldtest  chldtest.c  condtest  condtest.c  dnstest.c  dyn_hello.elf  hello-la.S  hello-la.elf  la_hello.S  la_hello.elf  ld-musl-riscv64.so.1  masktest  masktest.c  nettest.c  pipetest  pipetest.c  pthtest  pthtest.c  real_git.elf  sigtest  sigtest.c
user/.cargo/: config.toml
user/git/: Cargo.toml
user/git/src/: main.rs
user/hello/: Cargo.toml  linker.ld
user/hello/src/: main.rs
user/musl_hello/: Cargo.toml
user/musl_hello/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
