[package]
name = "kernel"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
riscv = "0.11"
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "lazy"] }
bitflags = "2.6"
buddy_system_allocator = "0.10"
log = "0.4"
xmas-elf = "0.9"
virtio-drivers = "0.7"
fdt = "0.1"

[features]
default = []
bare_hello = []
musl_hello = []
rust_git = []
shell = []
dyn_hello = []
