[package]
name = "kernel"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "lazy"] }
bitflags = "2.6"
buddy_system_allocator = "0.10"
log = "0.4"
xmas-elf = "0.9"
virtio-drivers = "0.7"
fdt = "0.1"
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "socket-dns"] }

# riscv64-only: SBI calls and the `riscv` register crate carry RISC-V
# inline asm, so they must not be pulled into the loongarch64 build.
[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
riscv = "0.11"

[features]
default = ["contest"]
# Contest mode: boot straight into the OS-comp test runner and shut
# down when done. Default so `make all` produces a contest-ready ELF.
contest = []
bare_hello = []
musl_hello = []
rust_git = []
shell = []
console = []
dyn_hello = []
