[package]
name = "kernel"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex", "rwlock", "lazy"] }
bitflags = "2.6"
buddy_system_allocator = "0.10"
log = "0.4"
xmas-elf = "0.9"
virtio-drivers = "0.7"
fdt = "0.1"
smoltcp = { version = "0.11", default-features = false, features = ["alloc", "medium-ethernet", "proto-ipv4", "socket-tcp", "socket-udp", "socket-dns"] }

# riscv64-only: SBI calls and the `riscv` register crate carry RISC-V
# inline asm, so they must not be pulled into the loongarch64 build.
[target.'cfg(target_arch = "riscv64")'.dependencies]
sbi-rt = { version = "0.0.3", features = ["legacy"] }
riscv = "0.11"

[features]
default = ["contest"]
# Contest mode: boot straight into the OS-comp test runner and shut
# down when done. Default so `make all` produces a contest-ready ELF.
contest = []
# Diagnostic LTP mode: after the per-arch whitelist, also sweep every other
# binary in testcases/bin (pass 2). Off by default so the contest build runs
# only the known-good scoring whitelist (no stress/OOM case can wedge it); CI
# turns it on to discover new scorers to fold back into the whitelist.
diag_full_ltp = []
# Single-test harness (local dev only): run ONLY the LTP cases named in the
# XIANDE_TESTS build-time env, at a generous 25s timeout, no sweep — validate a
# fix against one target test without a full run.
# e.g. XIANDE_TESTS="fanotify10" cargo build --features single_ltp
single_ltp = []
bare_hello = []
musl_hello = []
rust_git = []
shell = []
console = []
dyn_hello = []
# loongarch64 bring-up: boot a freestanding LA "hello" that writes to fd 1
# and exits, proving user paging + the first syscall path end-to-end.
la_hello = []
